# $Id$

2005-08-31
	* FreeBSD support was added

2005-08-27
	* added threaded execi, $texeci
	* feature freeze

2005-08-26
	* Fixed slight vertical misalignment of bars/graphs (sf.net 1273994)
	* Diskio fixes (sf.net 1274140)
	* $alignr and $alignc now have 25% more goodness! (sf.net bug 1273905)
	* Far better SMP support
	* Added support for i8k kernel driver, parsing information for dell inspiron laptops found in /proc/i8k (sf.net request 1256058)

2005-08-25
	* More own_window fixes
	* applied disk io patch (sf.net patch 1271691)
	* applied $freq fixes patch, adds new $freq_dyn (sf.net patch 1271633)
	* removed units from $freq* output
	* fix for graph config parsing
	* Added $head, fixed mem leak with $tail

2005-08-24
	* More configure and makefile updates
	* Added scale arg for net graphs
	* Fixed bug in own_window stuff--amazing fake transparency now works
	properly
	* added own_window_colour, own_window_transparent

2005-08-23
	* Added maximum_width

2005-08-22
	* Added $execibar and $execigraph

2005-08-21
	* Moved source into src/, moved docs into doc/
	* Updated makefiles

2005-08-20
	* Applied patch from zimba-tm, closes patch 1260225
	* Fixed ugly gradient bug.  closes bug 1255608
	* Added $voffset
	* Removed metar code.  It sucked.
	* Added $acpitempf for amooricans
	* $tail fixes

2005-08-12
	* Multiple unit additions and modifications

2005-08-07
	* mpd password patch from Joshua Gerrish
	* conky can run without X now, use --disable-x11 when configuring
=========================================================================
=========================================================================
2005-08-06
	* Conky 1.2 released

2005-08-05
	* small fixes
	* added CVS ebuild, huge thanks to Hopeless for this

2005-08-04
	* special thanks to Citizen_X and his patience
	* Citizen_X pwns
	* keep shakin' those big 'ol titties
	* Citizen_X
	* Citizen_X
	* Citizen_X
	* Citizen_X

2005-08-03
	* many small fixes, thanks to those who reported problems
