@@ -101,6 +101,9 @@ Lucas Brutschy <lbrutschy at users dot sourceforge dot net>
 Moncelier Camille <pixdamix at users dot sourceforge dot net>
   METAR patch
 
+nathanj439 <nathanj439 at users dot sourceforge dot net>
+  MPD time fix
+
 roiban adi <adiroiban at users dot sourceforge dot net>
   hex colour patch
 
